--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,7 +16,9 @@
 }
 
 body {
-  height: 100vh;
+  // height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   width: 100%;
   overflow: hidden;
   // font-family: "abril";
