--- a/main.css
+++ b/main.css
@@ -16,8 +16,7 @@
 }
 
 body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
   font-family: "Space Grotesk", sans-serif;
