--- a/src/style/main.css
+++ b/src/style/main.css
@@ -16,8 +16,7 @@
 }
 
 body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
   font-family: "Space Grotesk", sans-serif;
@@ -299,6 +298,10 @@ footer section h2 {
   }
   p {
     font-size: 12px;
+  }
+  footer {
+    -webkit-transform: translate(0, -100px);
+            transform: translate(0, -100px);
   }
 }
 
