Ajout du contenu et des différents composants dans la page d'acceuil

--- a/bureau-imaginaire/src/Components/Footer/Footer.css
+++ b/bureau-imaginaire/src/Components/Footer/Footer.css
@@ -1,3 +1,10 @@
 footer {
-   
+   margin-top: 3vh;
+   bottom: 0;
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
