--- a/bureau-imaginaire/src/Components/Header/Header.css
+++ b/bureau-imaginaire/src/Components/Header/Header.css
@@ -1,4 +1,12 @@
 body {
     
 }
+nav {
+    margin: 3vh;
+}
+nav ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
 
