--- a/bureau-imaginaire/src/Components/Footer/Footer.css
+++ b/bureau-imaginaire/src/Components/Footer/Footer.css
@@ -1,10 +1,15 @@
 footer {
-   margin-top: 3vh;
-   bottom: 0;
+    margin: 3vh;
+    bottom: 0;
 }
 
 footer ul {
     display: flex;
     justify-content: space-around;
-    width: 100%;
+}
+
+footer ul li a {
+    text-decoration: none;
+    color: black;
+    font-family: "Avenir";
 }
