--- a/bureau-imaginaire/src/Components/Header/Header.css
+++ b/bureau-imaginaire/src/Components/Header/Header.css
@@ -1,12 +1,17 @@
-body {
+header {
     
 }
 nav {
-    margin: 3vh;
+    padding: 3vh;
 }
 nav ul {
     display: flex;
     justify-content: space-around;
-    width: 100%;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-family: "Avenir";
 }
 
