--- a/bureau-imaginaire/src/Components/Header/Header.css
+++ b/bureau-imaginaire/src/Components/Header/Header.css
@@ -1,12 +1,10 @@
-header {
-    
-}
 nav {
-    padding: 3vh;
+    padding: 0 3vh;
 }
 nav ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav ul li a{
@@ -14,4 +12,5 @@ nav ul li a{
     color: black;
     font-family: "Avenir";
 }
+
 
