--- a/bureau-imaginaire/src/Components/Header/Header.css
+++ b/bureau-imaginaire/src/Components/Header/Header.css
@@ -1,5 +1,5 @@
 nav {
-    padding: 0 3vh;
+    padding: 0 1vh;
 }
 nav ul {
     display: flex;
@@ -11,6 +11,14 @@ nav ul li a{
     text-decoration: none;
     color: black;
     font-family: "Avenir";
+}
+
+@media (max-width: 768px) {
+    nav ul li a {
+        font-size: 14px;
+        width: 50%;
+    }
+
 }
 
 
