--- a/bureau-imaginaire/src/index.css
+++ b/bureau-imaginaire/src/index.css
@@ -6,8 +6,16 @@
 }
 
 /*-----------------------GENERAL----------------------------*/
-
+.titre {
+    margin: 2vh;
+    font-family: 'Avenir';
+    text-align: center;
+}
 .sous-titre {
     text-align: center;
     margin: 3vh 0;
+}
+
+.flex {
+    display: flex;
 }
