--- a/bureau-imaginaire/src/Pages/TravaillerEnsemble/TravaillerEnsemble.css
+++ b/bureau-imaginaire/src/Pages/TravaillerEnsemble/TravaillerEnsemble.css
@@ -5,7 +5,7 @@
 
 .containerEnsemble p {
     font-family: 'Avenir';
-    text-align: justify; 
+    text-align: justify;  
     font-weight: 500;
     font-size: 18px;
     -webkit-columns: 2;
@@ -14,4 +14,22 @@
     -webkit-column-gap: 40px;
     -moz-column-gap: 40px;
     columns-gap: 40px;
+}
+
+.sectionConstructionProjet ol {
+    text-align: center;
+    counter-reset: my-awesome-counter;
+}
+
+.sectionConstructionProjet ol li {
+    counter-increment: my-awesome-counter;
+}
+
+.sectionConstructionProjet ol li::before {
+    content: "0" counter(my-awesome-counter);
+    font-weight: bold;
+    font-size: 3rem;
+    margin-right: 0.5rem;
+    font-family: 'Abril Fatface', serif;
+    line-height: 1;
 }
