--- a/bureau-imaginaire/src/Pages/TravaillerEnsemble/TravaillerEnsemble.css
+++ b/bureau-imaginaire/src/Pages/TravaillerEnsemble/TravaillerEnsemble.css
@@ -3,33 +3,59 @@
     margin: auto;
 }
 
-.containerEnsemble p {
-    font-family: 'Avenir';
-    text-align: justify;  
-    font-weight: 500;
-    font-size: 18px;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-    columns: 2;
-    -webkit-column-gap: 40px;
-    -moz-column-gap: 40px;
-    columns-gap: 40px;
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 200px);
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
-.sectionConstructionProjet ol {
+.card {
     text-align: center;
-    counter-reset: my-awesome-counter;
+    align-self: center;
 }
 
-.sectionConstructionProjet ol li {
-    counter-increment: my-awesome-counter;
+.card:nth-child(2){
+    grid-column: 2 / 3;
 }
 
-.sectionConstructionProjet ol li::before {
-    content: "0" counter(my-awesome-counter);
-    font-weight: bold;
-    font-size: 3rem;
-    margin-right: 0.5rem;
-    font-family: 'Abril Fatface', serif;
-    line-height: 1;
+.card:nth-child(3){
+    grid-column: 3 / 4;
+}
+
+.card:nth-child(5){
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.card:nth-child(6){
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.card:nth-child(8){
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.card:nth-child(9){
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.card:nth-child(11){
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
+.card:nth-child(12){
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.card:nth-child(15){
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
 }
