--- a/bureau-imaginaire/src/Components/Header/Header.css
+++ b/bureau-imaginaire/src/Components/Header/Header.css
@@ -1,6 +1,3 @@
-nav {
-    padding: 0 1vh;
-}
 nav ul {
     display: flex;
     justify-content: space-evenly;
@@ -13,12 +10,141 @@ nav ul li a{
     font-family: "Avenir";
 }
 
-@media (max-width: 768px) {
-    nav ul li a {
-        font-size: 14px;
-        width: 50%;
+
+
+/*-------------------FORMAT MOBILE-------------------*/
+@media (max-width: 821px){
+    .desktop-menu {
+        display: none;
+    }
+
+    /* nav {
+        background-color: #2D2B2B;  
+    } */
+
+    /*--------------------MENU BURGER------------------*/
+
+    .mobile-menu-section {
+        top: 0;
+        z-index: 10000;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        position: fixed;
+        width: 100%;
+        right: 0;
+    }
+
+    .mobile-menu-section img {
+        height: 100%;
+    }
+
+    .mobile-menu-links {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        right: -100vw;
+        bottom: 0;
+        height: 100vh;
+        padding: 2rem;
+        background-color: #2D2B2B;
+        transition: all 1s ease-in;
+    }
+
+    .show-nav .mobile-menu-links {
+        transition: all 1s;
+        right: 0;
+        right: 0;
+        width: 100vw;
+        visibility: visible;
+    }
+
+    .show-nav .burger-bar {
+        color: #fff;
+    }
+
+    .mobile-menu-links li {
+        display: block;
+        padding: 1.5rem;
+    }
+
+    .mobile-menu-section ul li a {
+        color: white;
+        list-style: none;
+    }
+
+    .mobile-menu-burger {
+        width: 20px;
+        height: 20px;
+        /* background: transparent; */
+        border: none;
+        /* color: inherit; */
+        display: block;
+        position: fixed;
+        top: 1;
+        right: 2em;
+       
+        background-color: white ;
+    }
+
+    .mobile-menu-burger:hover {
+        cursor: pointer;
+    }
+
+    .burger-bar, .burger-bar::after, .burger-bar::before {
+        display: block;
+        width: 30px;
+        height: 3px;
+        position: relative;
+        border-radius: 3px;
+        transition: all .5s ease-in-out;
+        
+
+    }
+
+
+    .show-nav .burger-bar, .show-nav .burger-bar::after, .show-nav .burger-bar::before {
+        
+    }
+
+    .burger-bar::before, .burger-bar::after {
+        content: "";
+        position: absolute;
+        left: 0;
+    }
+
+    .burger-bar::before {
+        transform: translateY(-12px);
+    }
+
+    .burger-bar::after {
+        transform: translateY(12px);
+    }
+
+    .show-nav .burger-bar {
+        background: transparent;
+    }
+
+    .show-nav .burger-bar::before {
+        transform: rotate(45deg);
+    }
+
+    .show-nav .burger-bar::after {
+        transform: rotate(-45deg);
     }
 
 }
+
+@media (min-width: 821px){
+    .mobile-menu-section {
+        display: none;
+    }
+}
+
+
+
+
 
 
